docs: ajusta estrutura de arquivos

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: cactus;
-  src: url(./assets/font/Cactus\ Regular.otf);
+  src: url(../font/Cactus\ Regular.otf);
 }
 
 .button {
