--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,5 +1,25 @@
+/* mobile */
+@media screen and (max-width: 576px) {
+  .h1-header {
+    font-size: 70px;
+    line-height: 1.0;
+  }
+  .h1-span {
+    display: flex;
+  }
+  .p-home {
+    font-size: 25px;
+  }
+}
+
+/* tablet */
 @media screen and (max-width: 768px) {
   .header {
     flex-direction: column;
   }
+}
+
+/* laptop */
+@media screen and (max-width: 992px) {
+
 }
