--- a/css/style.css
+++ b/css/style.css
@@ -39,9 +39,9 @@ header {
 }
 
 .p-home {
-  font-family: "Arsenal", sans-serif !important;
-  font-weight: 700 !important;
-  color: #000 !important;
+  font-family: "Arsenal", sans-serif;
+  font-weight: 700;
+  color: #000;
 }
 
 .missao, .visao, .valores {
