fix: ajusta section quem somos

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -10,6 +10,13 @@
   .p-home {
     font-size: 25px;
   }
+  .about {
+    flex-direction: column;
+  }
+  .h1-quem {
+    font-size: 80px;
+  }
+
 }
 
 /* tablet */
