fix: ajusta responsividade section atividades

--- a/css/style.css
+++ b/css/style.css
@@ -142,12 +142,12 @@ header {
   color: #7A3B20;
 }
 
-.title-card-atividades {
+.title-card-projetos {
   font-family: cactus;
   color: #232C21;
 }
 
-.p-card-atividades {
+.p-card-projetos {
   font-family: "Arsenal", sans-serif;
   font-weight: 400;
   color: #10140F;
