fix: ajusta section apoia

--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,7 @@ header {
 .h2-apoia{
   font-size: 40px;
   font-family: cactus;
-  color: #000;
+  color: #10140F;
 }
 .p-apoia{
   font-family: "Arsenal", sans-serif !important;
