--- a/css/style.css
+++ b/css/style.css
@@ -219,3 +219,14 @@ header {
 hr {
   color: var(--chestnut);
 }
+
+.h-projetos {
+  font-family: cactus;
+  color: var(--brown);
+}
+
+.p-projetos {
+  font-family: "Arsenal", sans-serif !important;
+  font-weight: 700 !important;
+  color: var(--brown);
+}
