--- a/css/style.css
+++ b/css/style.css
@@ -230,3 +230,14 @@ hr {
   font-weight: 700 !important;
   color: var(--brown);
 }
+
+.title-equipe {
+  font-family: cactus;
+  color: var(--green);
+}
+
+.p-equipe {
+  font-family: "Arsenal", sans-serif !important;
+  font-weight: 700 !important;
+  color: var(--green);
+}
