fix: Ajuste de espaçamentos/responsividade e adição de imagem na secão 'nossa esquipe'.

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -34,7 +34,7 @@
   }
   .col-projetos {
     width: 575px;
-    padding: 30px;
+    /* padding: 30px; */
   }
   .h-projetos {
     font-size: 70px;
