--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,7 +1,7 @@
 /* sm */
 @media screen and (max-width: 575px) {
   .h1-header {
-    font-size: 70px;
+    font-size: 4.25rem;
     line-height: 1.0;
   }
   .p-home {
@@ -10,8 +10,8 @@
   .about {
     flex-direction: column;
   }
-  .h1-quem {
-    font-size: 80px;
+  .title-green {
+    font-size: 4rem;
   }
   .carrossel {
     width: 575px;
@@ -30,7 +30,7 @@
     font-size: 1rem;
   }
   .text-conheca {
-    font-size: 2.50rem;
+    font-size: 4rem;
   }
   .col-projetos {
     width: 575px;
