--- a/css/style.css
+++ b/css/style.css
@@ -200,7 +200,7 @@ header {
   color: var(--olive-drab-camouflage);
 }
 
-.rodape-p {
+.rodape-p, .rodape-a {
   font-family: "Arsenal", sans-serif !important;
   font-weight: 700 !important;
   color: var(--olive-drab-camouflage);
