--- a/css/style.css
+++ b/css/style.css
@@ -225,29 +225,18 @@ header {
 }
 
 .header-grupo{
-  height: 547px;
+  height: 50% !important;
 }
+
 .h-grupo{
   font-family: cactus;
   color: var(--light-brown);
-  max-width: 750px;
-  font-size: 60px;
 }
 
 .p-grupo{
   font-family: "Arsenal", sans-serif !important;
   font-weight: 700 !important;
   color: var(--black);
-  max-width: 550px;
-  font-size: 18px;
-}
-.img-grupo{
-  width: 291.73px !important;
-  height: 291.73px !important;
-}
-
-.projetos{
-  height: 500px;
 }
 
 .h-projetos {
@@ -259,8 +248,6 @@ header {
   font-family: "Arsenal", sans-serif !important;
   font-weight: 700 !important;
   color: var(--brown);
-  max-width: 580px;
-  font-size: 18px;
 }
 
 .title-equipe {
@@ -272,8 +259,6 @@ header {
   font-family: "Arsenal", sans-serif !important;
   font-weight: 700 !important;
   color: var(--black);
-  font-size: 17px;
-  max-width: 400px;
 }
 
 .equipe-simios {
