--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,3 @@
-:root {
-  --black: #000000;
-  --brown: #4d250e;
-  --dark-brown: #43200B;
-  --light-brown: #612F19;
-  --chestnut: #A24E2A;
-  --chocolate: #d86b29;
-  --dutch-white: #f2dcbd;
-  --olive-drab-camouflage: #554d42;
-  --green: #2e3a2c;
-  --dark-footer: #DAC6AA;
-  --text-dark-footer: #918471;
-}
-
 @font-face {
   font-family: cactus;
   src: url(../font/Cactus\ Regular.otf);
@@ -137,7 +123,7 @@ header {
 
 .h2-quem {
   font-family: cactus;
-  color: var(--green);
+  color: #2E3A2C;
 }
 
 .card-equipe {
